# dotbackup

./: .gitignore  LICENSE  README.md  dotbackup.1.adoc  dotsetup.1.adoc  hatch_build.py  pyproject.toml
.github/workflows/: lint.yml  release.yml  style.yml  test.yml  typos.yml
debian/: changelog  control  rules
examples/: config.yml
src/: dotbackup.py
tests/: functional_test.py  helper.py  misc_test.py  test_basic.py  test_complex_script.py  test_ignore.py  unit_test.py
tests/configs/: basic.yml  clean.yml  complex_script.yml  ignore.yml  only_hooks.yml
