[project]
name = "dotbackup"
dynamic = ["version"]
authors = [
	{ name="Jax Young", email="jaxvanyang@gmail.com" },
]
description = """\
	YAML config based backup utility. Easy to use yet flexible. With a primary focus on \
	dotfile backup & setup, but not limited to dotfiles.\
	"""
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["ruamel.yaml"]
keywords = ["YAML", "dotfiles", "backup"]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"License :: OSI Approved :: MIT License",
	"Operating System :: POSIX",
	"Development Status :: 5 - Production/Stable",
	"Topic :: System :: Archiving :: Backup",
	"Intended Audience :: Developers",
]

[project.scripts]
dotbackup = "dotbackup:dotbackup"
dotsetup = "dotbackup:dotsetup"

[project.urls]
Homepage = "https://github.com/jaxvanyang/dotbackup"
Source = "https://github.com/jaxvanyang/dotbackup"
Repository = "https://github.com/jaxvanyang/dotbackup.git"
Issues = "https://github.com/jaxvanyang/dotbackup/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/dotbackup.py"

[tool.hatch.build.targets.wheel]
packages = ["src/dotbackup.py"]

[tool.hatch.build.targets.wheel.hooks.custom]

[tool.hatch.build.targets.wheel.shared-data]
"dotbackup.1" = "share/man/man1/dotbackup.1"
"dotsetup.1" = "share/man/man1/dotsetup.1"

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
addopts = ["--import-mode=importlib"]
